--- a/Thesis.tex
+++ b/Thesis.tex
@@ -1,6 +1,7 @@
 \documentclass[11pt, a4paper, numbers=noenddot]{scrartcl}
 
 \usepackage[T1]{fontenc}
+\usepackage{lmodern}
 \usepackage[utf8]{inputenc}
 \usepackage{makeidx}
 \usepackage{amsfonts}
@@ -60,8 +61,10 @@
 \evensidemargin7mm
 \oddsidemargin7mm
 \footskip19mm
-\parindent=0in
+%\parindent=0in
 \linespread{1.15}
+
+\def\i2b2{\textit{i2b2}}
 
 \newdateformat{usvardate}{\monthname[\THEMONTH] \ordinaldate{\THEDAY}, \THEYEAR}
 \newdate{submissiondate}{30}{06}{2015}
@@ -94,8 +97,8 @@
 
 \newpage
 
-\addcontentsline{toc}{section}{References}
 \bibliography{bibliography/references}
+\addcontentsline{toc}{section}{References}
 
 \newpage
 \thispagestyle{empty}
