reference our own theses

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -97,7 +97,7 @@
 
 \newpage
 
-\bibliography{bibliography/references}
+\bibliography{bibliography/references,bibliography/theses}
 \addcontentsline{toc}{section}{References}
 
 \newpage
