--- a/bibliography/theses.bib
+++ b/bibliography/theses.bib
@@ -37,3 +37,11 @@
 	SCHOOL = "Hasso-Plattner-Institute, Potsdam, Germany",
 	YEAR = 2015
 }
+
+@mastersthesis{schwarz15,
+	type = {Bachelor thesis},
+	AUTHOR = "Schwarz, Peter",
+	TITLE = "{Optimization and Extension of the HPCC JDBC Driver}",
+	SCHOOL = "Hasso-Plattner-Institute, Potsdam, Germany",
+	YEAR = 2015
+}
