--- a/bibliography/theses.bib
+++ b/bibliography/theses.bib
@@ -33,7 +33,7 @@
 @mastersthesis{ambroselli15,
 	type = {Bachelor thesis},
 	AUTHOR = "Ambroselli, Carl",
-	TITLE = "{Visualizing Information of Big Medical Data}",
+	TITLE = "{Efficiently Visualizing Big Medical Data}",
 	SCHOOL = "Hasso-Plattner-Institute, Potsdam, Germany",
 	YEAR = 2015
 }
