Updates to Naumanns suggestions

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt, a4paper, numbers=noenddot]{scrartcl}
+\documentclass[11pt, a4paper, numbers=noenddot, abstract=on]{scrartcl}
 
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
@@ -79,6 +79,8 @@
 \input{chapters/titlepage}
 \thispagestyle{empty}
 \input{chapters/abstract}
+\newpage
+\input{chapters/summary}
 \newpage
 \thispagestyle{empty}
 \tableofcontents
