language for summary

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -16,7 +16,7 @@
 \usepackage{scrpage2}
 \usepackage{url}
 \usepackage{babelbib}
-\usepackage[english]{babel}
+\usepackage[german,english]{babel}
 \usepackage[font=small,labelfont=bf,margin=1cm]{caption}
 \usepackage{tabularx}
 \usepackage{graphicx}
