Summary as abstarct

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -80,6 +80,7 @@
 \thispagestyle{empty}
 \input{chapters/abstract}
 \newpage
+\thispagestyle{empty}
 \input{chapters/summary}
 \newpage
 \thispagestyle{empty}
